CSS white-space: nowrap added for full_name to avoid overflow with more than one line

--- a/app/assets/stylesheets/type.css
+++ b/app/assets/stylesheets/type.css
@@ -8,7 +8,8 @@
       font-size: 60px; } }
 
 .t-display-full-name {
-  font-weight: 600; }
+  font-weight: 600;
+  white-space: nowrap;}
 @media (max-width: 929px) {
   .t-display-full-name {
     font-size: 30px; } }
